# NeurDE

./: .gitignore  README.md  animate.py  environment.yml  eval.py  generate_data.py  pyproject.toml  train_stage1.py  train_stage2.py
Cylinder/: train_stage_2.py
Cylinder_faster/: train_stage_2.py
Cylinder_faster/utilities/: basic.py
SOD_shock_tube/: eval.py  train_stage_2.py
SOD_shock_tube/utilities/: optimizer.py
configs/: config.yaml  eval.yaml
configs/case/: cylinder.yaml  cylinder_faster.yaml  sod_shock_tube.yaml
configs/dataset/: stage1.yaml  stage2.yaml
configs/hydra/: local.yaml
configs/logging/: mlflow.yaml  wandb.yaml
configs/model/: neurde.yaml
configs/optimizer/: adabelief.yaml  adam.yaml  adamw.yaml  lion.yaml  sgd.yaml
configs/scheduler/: constant.yaml  cos_anneal.yaml  cos_anneal_wr.yaml  cosineannealing.yaml  onecyclelr.yaml
configs/training/: stage1.yaml  stage2.yaml
model/: model.py
training/: __init__.py  base.py  stage1_trainer.py  stage2_trainer.py
utils/: adaptive_gradient_clipper.py  animation.py  case_specific.py  core.py  data_io.py  datasets.py  experiment_tracking.py  loss.py  optimizer.py  physics_generator.py  plotting.py
utils/phys/: getFeq.py  getGeq.py  getPolyGeq.py  multinv.py
utils/plotters/: __init__.py  base.py  matplotlib.py  plotly.py
utils/solver/: __init__.py  base.py  cylinder.py  sod.py
utils/trackers/: __init__.py  base.py  mlflow.py  wandb.py
